syntax = "proto3";

package vaultron.agent.v1;

import "vaultron/common/v1/status.proto";

message StartEnclaveResponse {
}

message StopEnclaveResponse {
}

message RestartEnclaveResponse {
}

message EnclaveMeasurements {
  string hash_algorithm = 1 [json_name = "HashAlgorithm"];
  string pcr0           = 2 [json_name = "PCR0"];
  string pcr1           = 3 [json_name = "PCR1"];
  string pcr2           = 4 [json_name = "PCR2"];
}

message DescribeEnclaveInfo {
  string          enclave_name     = 1  [json_name = "EnclaveName"];
  string          enclave_id       = 2  [json_name = "EnclaveID"];
  uint32          process_id       = 3  [json_name = "ProcessID"];
  uint32          enclave_cid      = 4  [json_name = "EnclaveCID"];
  uint32          number_of_cpus   = 5  [json_name = "NumberOfCPUs"];
  repeated uint32 cpu_ids          = 6  [json_name = "CPUIDs"];
  uint32          memory_mib       = 7  [json_name = "MemoryMiB"];
  string          state            = 8  [json_name = "State"];
  string          flags            = 9  [json_name = "Flags"];
  EnclaveMeasurements measurements = 10 [json_name = "Measurements"];
}

message DescribeEnclaveResponse {
  DescribeEnclaveInfo info = 1;
}

message EnclaveAgentResponse {
  vaultron.common.v1.StatusCode code              = 1;
  oneof response {
    StartEnclaveResponse        start_response    = 2;
    StopEnclaveResponse         stop_response     = 3;
    RestartEnclaveResponse      restart_response  = 4;
    DescribeEnclaveResponse     describe_response = 5;
  }
}
